--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Savage Worlds Adventure Edition Funnel Generator</title>
+  <meta property="og:title" content="SWADE Level 0 Funnel Generator" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Generates level-0 'extras' for running a Savage Worlds SWADE 'funnels' as in DCC" />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
