Tweak open graph data

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Savage Worlds Adventure Edition Funnel Generator</title>
-  <meta property="og:title" content="SWADE Level 0 Funnel Generator" />
+  <title>Savage Worlds Adventure Edition Funnel Character Level 0 Generator</title>
+  <meta property="og:title" content="SWADE Level 0 Generator" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Generates level-0 'extras' for running a Savage Worlds SWADE 'funnels' as in DCC" />
+  <meta property="og:description" content="Generates level-0 'extras' for running DCC-style funnels in Savage Worlds" />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
